# video_pipeline

trunk/: matlab_new_server.sh  matlab_new_server_nodesktop.sh  mexopts.sh  my_filelist.txt  my_paths.ini  server_paths.ini  startup_guy.m  startup_mikhail.m  startup_new_server.m  startup_relax.m  startup_server.m  synthetic_2M_log.txt  synthetic_2M_video_log.txt  video_process_instructions.txt
trunk/__unused__/: CaffeWrapper.m  CoresetsComposite.m  PublishizePlot.m  VideoStream.m  add_gtsam_observations.m  aggregate_surf_histograms.m  analyze_image_content.m  annotate_video_classification.m  batch_annotate_videos.m  batch_collect_descriptors.m  batch_process_video_measure_blur.m  batch_process_video_measure_blur2.m  batch_process_video_online_no_tracking.m  camstat_struct_from_KRT.m  camstat_struct_from_P.m  choose_valid_epipolar_line_distance.m  chunk_input.m  classify_VOC.m  collect_B3DO_BOWs.m  collect_ILVSRC_BOWs.m  collect_SUN_BOWs.m  compute_Rand_cost.m  compute_VOC_BOWs.m  compute_concentrated_data.m  compute_distance_from_segment.m  compute_fundamental_matrix_distance.m  compute_processed_bow.m  compute_projection_from_annotation.m  construct_reweighting_matrix.m  correct_coordinates.m  create_checkerboard.m  create_segmentation_figure.m  crop_image_box.m  delete_file_list.m  derivate_closed_form.m  estimate_blur.m  estimate_blur_indicators.m  estimate_blur_indicators2.m  estimate_blur_indicators3.m  extract_semantic_words.m  (+48 more)
trunk/bash_scripts/: concat_list.txt  concat_video.sh  cut_video.sh  merge_video.sh  rename_files.sh  rotate_video.sh  subsample_video.sh  timelapse.sh
trunk/coreset_tree/: coreset_tree_gui.m  coreset_tree_gui_full.m
trunk/demo/: VQ.mat
trunk/detection_n_retrieval/: init_save_detections.m  save_coreset_detections.m  save_synthetic_detections.m  test_save_coreset_detections.m
trunk/feature_learning/: constrained_gd.m  test_weights_cost.m  weight_different_cost.m
trunk/ksegment_coreset/: AbstractBicriteriaAlg.m  ClusterVector.m  Matrix.m  NonUniformSamplingAlg.m  PointFunctionSet.m  Stream.m  TwoSegmentCoreset.m  TwoSegmentCoresetAlg.m  gps_eps_plot.m  gps_plot.m  make_blocks.m  startup_mikhail.m  test_TwoSegmentCoreset.m
trunk/learning/: NaiveBayesClassifier.m  compute_bag_of_words.m  create_classifiers.m  create_indicator_table.m  produce_object_hypotheses.m  test_NaiveBayesClassifier.m  train_nn_classifier.m  train_nn_classifier2.m
trunk/loop_closure/: LoopClosure.m  build_openfabmap.m  compare_page_closure.m  compile_lc_mex.m  find_last_leaf.m  find_last_node.m  import_boston_glass_gps.m  loops_interlaced.m  loops_single_source.m  (+16 more)
trunk/rtvproc/: CMakeLists.txt  Makefile  RTVideoProcessing.cpp  RTVideoProcessing.h  SimpleProfiler.h  add_leaf.m  aggregate_surf_features.m  aggregate_surf_features_2scales.m  analyze_blur.m  clean_VQ.m  compile_mex.m  compile_mex_linux.m  compile_mex_mac.m  compile_mex_new_server.m  compile_mex_relax.m  compile_mex_server.m  compute_acrf_quality.m  create_simpler_coreset_tree.m  display_bow_results.m  draw_keyframe_collage.m  draw_keyframe_metrics.m  draw_kx_metrics_3d.m  fps.m  log_gopro_video.txt  log_to_file.m  make_rtvproc.m  make_rtvproc.sh  matlab.mat  matlab_new_server.sh  matlab_server.sh  mex_compute_sparse_coefficients.cpp  mex_video_processing.cpp  mex_video_processing.mexa64  mybuild.m  process_coreset_tree.m  process_synthetic_video_wrapper.m  process_uploaded_videos.m  process_video.m.mine  process_video.m.r1421  process_video.m.r1483  (+29 more)
trunk/rtvproc/run/: run_HogD.m  run_birdman.m  run_birdman_full.m  run_boston.m  run_ladybird.m  run_okgo.m  run_stills.m  run_webcam.m
trunk/rtvproc/tcp_processor/: serialization.h  tcp_client.cpp  tcp_client.m  tcp_msg.h  tcp_newframe.m  tcp_script.m  tcp_server.cpp  tcp_setup.m  tcp_types.h
trunk/rtvproc/webcam/: main.cpp
trunk/searchobjects/text/: CMakeLists.txt  save2db.py  test.py  test_test.py  textDetectionRecognition.cpp  textDetectionRecognition.h  updateTextInfo2DB.py
(+202 files in other folders)
